--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-Dorothy
+Dorothy - work in progress
 
 This is a simple proof-of-concept app inspired by Dorothy's List, Vermont Public Radio's book club for kids.
